Correction du wrap pour les éléments de l'accueil

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -100,7 +100,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 55em;
+    max-width: 45em;
     font-size: 20px;
 }
 
@@ -108,10 +108,10 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 45em;
+    font-size: 20px;
 }
 
-#iframe{
+#video_explicative > #iframe{
     width: 100%;
     max-width: 560px;
     border: none;
